nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2 # Количество копий (подов), которые будут запущены
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest # Имя Docker-образа и его версия
        ports:
        - containerPort: 80 # Порт, который слушает контейнер внутри пода
